--- a/src/components/css/Cart.css
+++ b/src/components/css/Cart.css
@@ -1,10 +1,23 @@
 section .cart{
     position: relative;
     border: 1px solid #ccc;
+    width: 1200px;
+}
+
+.conten-cart{
+    /* width: 100%; */
+    max-width: 1200px;
+    display: block;
+    margin:0 auto;
+    justify-content: center;
+}
+
+.details{
+    width: 1200px;
 }
 .amount span{
     color: crimson;
-    padding: 0 20px;
+    padding: 0 24px;
 }
 .amount .count{
     width: 40px;
@@ -15,15 +28,21 @@ section .cart{
     cursor: pointer;
 }
 .delete{
+    /* width: 50px; */
     position: absolute;
     top:0;
     right: 5px;
-    color: crimson;
     cursor: pointer;
-    font-weight: 900;
+    font-weight: 600;
+    font-size: 40px;
+    color: crimson;
+    padding-right: 20px;
 }
+
+
+
 .total{
-    width: 100%;
+    width: 1200px;
     height: 50px;
     display: flex;
     align-items: center;
